k8s-manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintech-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - fintech-frontend.lilianedevops.online
      - fintech-backend.lilianedevops.online
      # - jenkins.lilianedevops.online
    secretName: fintech-tls
  rules:
  - host: fintech-frontend.lilianedevops.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-fintech
            port:
              number: 80
  - host: fintech-backend.lilianedevops.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-fintech
            port:
              number: 5000
  # - host: jenkins.lilianedevops.online
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: jenkins
  #           port:
  #             number: 8080
